--- a/src/index.css
+++ b/src/index.css
@@ -59,3 +59,29 @@
   font-size: 20px;
   margin-bottom: 8px;
 }
+
+.blog-preview a{
+  text-decoration: none;
+}
+
+
+/* blogdetails page */
+
+.blog-details h2{
+  font-size: 20px;
+  color: rgb(10,175,112);
+  margin-bottom: 10px;
+}
+
+.blog-details div{
+  margin: 20px 0;
+}
+
+.blog-details button{
+  background: rgb(10,175,112);
+  color: white;
+  border: 0;
+  padding: 8px;
+  border-radius: 8px;
+  cursor: pointer;
+}
