--- a/src/index.css
+++ b/src/index.css
@@ -85,3 +85,47 @@
   border-radius: 8px;
   cursor: pointer;
 }
+
+
+/* create new blog form */
+
+.create{
+  max-width: 400px;
+  margin: 0 auto;
+  text-align:center;
+}
+
+.create label{
+  text-align: left;
+  display: block;
+}
+
+.create h2{
+  font-size: 20px;
+  color: rgb(10,175,112);
+  margin-bottom: 30px;
+}
+
+.create input, .create textarea, .create select{
+  width: 100%;
+  padding: 6px 10px;
+  margin: 10px 0;
+  border: 1px solid #ddd;
+  box-sizing: border-box;
+  display: block;
+  outline: none;
+}
+
+.create input:focus, .create textarea:focus, .create select:focus{
+  border: 1px solid rgb(10,175,112);
+  outline: 4px solid rgba(10,175,112,0.3);
+}
+
+.create button {
+  background: rgb(10,175,112);
+  color: white;
+  border: 0;
+  padding: 8px;
+  border-radius: 8px;
+  cursor: pointer;
+}
